--- a/public/css/mycustom.css
+++ b/public/css/mycustom.css
@@ -21,6 +21,11 @@ a, a:hover, a:focus {
     transition: all .3s; NI IDEA PARA QUE SERVIRAN ESTAS LINEAS*/
 }
 
+.table_striped_cool>tbody>tr:nth-child(odd)>td,
+.table_striped_cool>tbody>tr:nth-child(odd)>th {
+	background-color: #00b7fd24;
+}
+
 /* Contenidos y Formulario*/
 .logo{
 height: 60px;
