--- a/public/css/mycustom.css
+++ b/public/css/mycustom.css
@@ -8,12 +8,16 @@ body.mybody {
     background-color: #3ca8e7;
 
 }
-strong { 
-	font-weight: 500; 
+
+strong {
+    font-weight: 500;
 }
-a, a:hover, a:focus {
-	
-	text-decoration: none;
+
+a,
+a:hover,
+a:focus {
+
+    text-decoration: none;
     /*-o-transition: all .3s; 
     -moz-transition: all .3s; 
     -webkit-transition: all .3s; 
@@ -23,54 +27,62 @@ a, a:hover, a:focus {
 
 .table_striped_cool>tbody>tr:nth-child(odd)>td,
 .table_striped_cool>tbody>tr:nth-child(odd)>th {
-	background-color: #0bec964d;
+    background-color: #0bec964d;
 }
 
 .table_striped_presidenciales>tbody>tr:nth-child(odd)>td,
 .table_striped_presidenciales>tbody>tr:nth-child(odd)>th {
-	background-color: #0bcaec65;
+    background-color: #0bcaec65;
 }
+
 .table_striped_uninominales>tbody>tr:nth-child(odd)>td,
 .table_striped_uninominales>tbody>tr:nth-child(odd)>th {
-	background-color: #f51ebf5e;
+    background-color: #f51ebf5e;
 }
 
 /* Contenidos y Formulario*/
-.logo{
-height: 60px;
-width: auto;
+.logo {
+    height: 60px;
+    width: auto;
 
 }
 
 .mytop-content {
     padding: 0px 0 100px 0;
 }
+
 .mytop-content .mydescription {
     margin: 20px 0 10px 0;
 }
-.mytop-content .mydescription p { 
-    opacity: 0.8; 
+
+.mytop-content .mydescription p {
+    opacity: 0.8;
 }
+
 .myform-cont {
     margin-top: 35px;
 }
+
 .myform-top {
     overflow: hidden;
     padding: 0 25px 15px 25px;
     background: #fff;
-    -moz-border-radius: 10px 10px 0 0; 
-    -webkit-border-radius: 10px 10px 0 0; 
+    -moz-border-radius: 10px 10px 0 0;
+    -webkit-border-radius: 10px 10px 0 0;
     border-radius: 10px 10px 0 0;
     text-align: left;
 }
-.myform-top-left { 
+
+.myform-top-left {
     float: left;
     width: 75%;
     padding-top: 25px;
 }
-.myform-top-left p { 
-    opacity: 0.8; 
+
+.myform-top-left p {
+    opacity: 0.8;
 }
+
 .myform-top-right {
     float: right;
     width: 25%;
@@ -79,6 +91,7 @@ width: auto;
     text-align: right;
     opacity: 0.3;
 }
+
 .myform_top_right_img {
     float: right;
     width: 25%;
@@ -86,32 +99,36 @@ width: auto;
     font-size: 66px;
     text-align: right;
 }
+
 .myform-bottom {
     padding: 5px 25px 30px 25px;
     background: #32a7eb;
-    -moz-border-radius: 0 0 10px 10px; 
-    -webkit-border-radius: 0 0 10px 10px; 
+    -moz-border-radius: 0 0 10px 10px;
+    -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;
 }
+
 .myform-bottom .mybtn {
     width: 100%;
 }
-input.form-control{
+
+input.form-control {
     vertical-align: middle;
     background: #fff;
-    border: 1px solid rgba(0, 0, 0);
+    border: 1px solid rgb(0, 0, 0);
     font-size: 16px;
     font-weight: 300;
     line-height: 50px;
 }
 
-input[type="text"]:focus, 
-input[type="password"]:focus, 
-textarea:focus, 
+input[type="text"]:focus,
+input[type="password"]:focus,
+textarea:focus,
 textarea.form-control:focus {
     background: #fff;
     border: 2px solid #95e62c;
 }
+
 button.mybtn {
     height: 50px;
     /* background: rgb(0, 0, 0); */
@@ -121,18 +138,26 @@ button.mybtn {
     font-weight: 500;
     line-height: 40px;
     color: #000;
-    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
-    -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    -o-transition: all .3s;
+    -moz-transition: all .3s;
+    -webkit-transition: all .3s;
+    -ms-transition: all .3s;
+    transition: all .3s;
 }
 
-button.mybtn:hover, button.mybtn:active { 
-    opacity: 0.6; 
-    color: rgb(0, 0, 0); 
-}
-button.mybtn:focus { 
+button.mybtn:hover,
+button.mybtn:active {
     opacity: 0.6;
-    color: #fff; 
-    background: #692817; 
+    color: rgb(0, 0, 0);
+}
+
+button.mybtn:focus {
+    opacity: 0.6;
+    color: #fff;
+    background: #692817;
 }
 
 /*LOGIN REDES SOCIALES*/
@@ -140,9 +165,11 @@ button.mybtn:focus {
 .mysocial-login {
     margin-top: 35px;
 }
+
 .mysocial-login-buttons {
     margin-top: 25px;
 }
+
 .mybtn-social {
     display: inline-block;
     height: 50px;
@@ -154,16 +181,19 @@ button.mybtn:focus {
     font-weight: 300;
     line-height: 16px;
     color: #fff;
-    -moz-border-radius: 4px; 
-    -webkit-border-radius: 4px; 
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
     border-radius: 4px;
 }
-.mybtn-social:hover, .mybtn-social:focus, 
-.mybtn-social:active, .mybtn-social:active:focus { 
+
+.mybtn-social:hover,
+.mybtn-social:focus,
+.mybtn-social:active,
+.mybtn-social:active:focus {
     outline: 0;
-    opacity: 0.6; 
-    background: rgba(0, 0, 0, 0.3); 
-    color: #fff; 
+    opacity: 0.6;
+    background: rgba(0, 0, 0, 0.3);
+    color: #fff;
 }
 
 /* Media queries */
@@ -173,11 +203,17 @@ button.mybtn:focus {
 @media (min-width: 768px) and (max-width: 991px) {}
 
 @media (max-width: 767px) {
-    
-    .mytop-content { padding: 60px 0 110px 0; }
+
+    .mytop-content {
+        padding: 60px 0 110px 0;
+    }
 
 }
 
 @media (max-width: 415px) {
-    h1, h2 { font-size: 32px; }
+
+    h1,
+    h2 {
+        font-size: 32px;
+    }
 }
