modificando colores login

--- a/public/css/mycustom-auth.css
+++ b/public/css/mycustom-auth.css
@@ -5,7 +5,7 @@ body.mybody {
     color: rgb(0, 0, 0);
     line-height: 30px;
     /* text-align: center; */
-    background-color: #3ff38a;
+    background-color: #008f7e;
 
 }
 
@@ -135,7 +135,7 @@ textarea.form-control:focus {
 
 button.mybtn {
     height: 50px;
-    background: rgb(53, 245, 126);
+    background: #C3222D;
     border: 0;
     font-size: 16px;
     font-weight: 500;
